# agentloop

./: .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  ISSUES.md  LICENSE  MANIFEST.in  README.md  agentloop.py  goal.txt  launch.ps1  launch.sh  mock_agent.sh  oracle.py  pyproject.toml  stop.sh  test_loop.py  test_oracle.py  verify.sh
.github/workflows/: ci.yml  release-please.yml
agentloop/: __init__.py  __main__.py  oracle.py
agentloop/data/: .env.example  launch.ps1  stop.ps1  stop.sh  verify_template.sh
agentloop/data/examples/json-linter/: verify.sh
agentloop/data/examples/refactor-regression/: verify.sh
agentloop/data/examples/tax-demo/: goal.txt  verify.sh
examples/json-linter/: goal.txt  verify.sh
examples/refactor-regression/: goal.txt  refactor_target.py  verify.sh
sandbox/: tax_calc.py
