[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentloop"
version = "0.3.0"
description = "Harness-agnostic, self-verifying autonomy wrapper for coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "AgentLoop contributors" }]
keywords = ["agents", "autonomy", "verification", "oracle", "coding-agents"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
]
dependencies = []

[project.optional-dependencies]
direct = ["openai>=1.0.0"]
dev = [
  "ruff>=0.8.0",
  "pre-commit>=4.0.0",
]

[project.scripts]
agentloop = "agentloop:cli"
agentloop-oracle = "oracle:_cli_entry"

[project.urls]
Homepage = "https://github.com/saiduttaabhishekdash/agentloop"
Issues = "https://github.com/saiduttaabhishekdash/agentloop/issues"

[tool.setuptools]
py-modules = ["agentloop", "oracle"]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["sandbox/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "YTT"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E402", "E501", "I001", "N802", "N803", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
